[package]
name = "calloop-dbus"
version = "0.1.0"
authors = ["Alexander Sieg <alex@xanderio.de>"]
edition = "2018"
description = "EventSource to use DBus with the calloop event loop."
readme = "README.md"
repository = "https://git.cyber-missile.io/xanderio/clacks"
license = "BSD-2-Clause"
keywords = ["eventloop", "calloop", "dbus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calloop = "0.6"
dbus = "0.8"
log = "0.4"
